Correcion de errata de .js

--- a/index.njk
+++ b/index.njk
@@ -265,7 +265,7 @@ permalink: "/"
         {% endif %}
       {% endfor %}
     </div>
-    <script src="/assets/reviews.js?v=1" defer></script>
+    <script src="/assets/review.js" defer></script>
     {# JSON-LD #}
     <script type="application/ld+json">
     {
