--- a/index.njk
+++ b/index.njk
@@ -177,8 +177,10 @@ permalink: "/"
 
       <div class="rating-cta">
         <a class="btn"
-           href="https://search.google.com/local/writereview?placeid=ChIJ_X7SQE43Wg0RtvVYh9tlK1g&hl=es-ES&gl=ES"
-           target="_blank" rel="noopener">Deja tu reseña en Google</a>
+          href="https://search.google.com/local/writereview?placeid=ChIJ_X7SQE43Wg0RtvVYh9tlK1g&hl=es-ES&gl=ES"
+          target="_blank" rel="noopener">
+          Deja tu reseña en&nbsp;<span class="logo-google" role="img" aria-label="Google"></span>
+        </a>
       </div>
     </div>
 
